update gradle config